# RLinf

./: .gitignore  AGENTS.md  AGENT_HIST.md  CODEX.md  HUMAN_CODEX.md  NOTES.md  TEMP.md  download_smolvla.sh  pyproject.toml
examples/embodiment/: run_libero_dsrl_smolvla_noray.sh  run_libero_ppo_openpi.sh  run_libero_ppo_openpi_pi0.sh  run_libero_ppo_openpi_pi05.sh  run_libero_ppo_openpi_pi05_noray.sh  run_libero_ppo_openpi_pi0_noray.sh  run_libero_ppo_smolvla.sh  run_libero_ppo_smolvla_noray.sh  run_libero_task0_ppo_openpi.sh  train_embodied_agent.py  train_embodied_agent_noray.py
examples/embodiment/config/: libero_10_dsrl_smolvla.yaml  libero_10_ppo_openpi_pi0.yaml  libero_10_ppo_openpi_pi05.yaml  libero_10_ppo_smolvla.yaml  libero_10_task0_ppo_openpi_pi05.yaml
exp_bash/: 20260331_actorlr2e5_scalar_mc_env16_exec4_mb2048.sh  20260331_actorlr2e5_valuelr15e4_scalar_mc_env16_exec4_mb2048.sh  20260331_baseline_scalar_mc_env16_exec4_mb2048.sh  20260331_scalar_mc_env16_exec4_mb2048_increase_net.sh  20260401_scalar_mc_env16_exec4_mb2048_increase_actor_lr.sh  EXPERIMENT_LOG.md  README.md  fetch_exp_wandb_runs.py  train_libero_dsrl_smolvla_noray.py
exp_bash/config/: 20260331_actorlr2e5_scalar_mc_env16_exec4_mb2048.yaml  20260331_actorlr2e5_valuelr15e4_scalar_mc_env16_exec4_mb2048.yaml  20260331_baseline_scalar_mc_env16_exec4_mb2048.yaml  20260331_scalar_mc_env16_exec4_mb2048_increase_net.yaml  20260401_scalar_mc_env16_exec4_mb2048_increase_actor_lr.yaml
job_submission/: 260210_fm_distill_Lf2h2_300k_2401till2501.yaml
lerobot/configs/: eval.py
lerobot/datasets/: streaming_dataset.py
lerobot/envs/: libero.py
lerobot/motors/: motors_bus.py
lerobot/policies/smolvla/: modeling_smolvla.py
lerobot/processor/: pipeline.py
lerobot/scripts/: lerobot_eval.py  lerobot_record.py
lerobot/utils/: control_utils.py  io_utils.py
requirements/: README.md  install.sh
requirements/embodied/: download_assets.sh
rlinf/: config.py
rlinf/algorithms/: advantages.py  losses.py
rlinf/envs/frankasim/: frankasim_env.py
rlinf/envs/habitat/: habitat_env.py  venv.py
rlinf/envs/libero/: libero_env.py  venv.py
rlinf/runners/: embodied_runner.py
rlinf/utils/: metric_logger.py  omega_resolver.py
rlinf/workers/env/: env_worker.py
rlinf_noray/: config.py
rlinf_noray/agents/mas_search/: __init__.py  mas_search_agent_loop.py
rlinf_noray/agents/multiturn_demo/: fake_tool_worker.py  mcp_agent_loop.py  mcp_filesystem_worker.py  tool_agent_loop.py
rlinf_noray/agents/rstar2/: http_code_judge_tool.py  http_tool_worker.py  rstar2_agent_loop.py
rlinf_noray/agents/searchr1/: search_tool_worker.py  searchr1_agent_loop.py
rlinf_noray/algorithms/: advantages.py  losses.py  registry.py  utils.py
rlinf_noray/algorithms/rewards/: __init__.py
rlinf_noray/data/: embodied_io_struct.py  io_struct.py  replay_buffer.py
rlinf_noray/data/datasets/: __init__.py  item.py  math.py  rstar2.py  vlm.py  world_model.py
rlinf_noray/envs/: __init__.py  action_utils.py  utils.py
rlinf_noray/envs/behavior/: behavior_env.py
rlinf_noray/envs/calvin/: __init__.py  calvin_gym_env.py  venv.py
rlinf_noray/envs/frankasim/: frankasim_env.py
rlinf_noray/envs/habitat/: __init__.py  habitat_env.py  venv.py
rlinf_noray/envs/isaaclab/: __init__.py  isaaclab_env.py
rlinf_noray/envs/libero/: libero_env.py  libero_env_lerobot_adapter.py  venv.py
rlinf_noray/envs/maniskill/: __init__.py  maniskill_env.py  maniskill_offload_env.py  utils.py
rlinf_noray/envs/metaworld/: __init__.py  metaworld_env.py  venv.py
rlinf_noray/envs/realworld/: realworld_env.py
rlinf_noray/envs/robocasa/: venv.py  (+2 more)
rlinf_noray/integrations/: __init__.py  lerobot_local_import.py  lerobot_pipeline_bridge.py
rlinf_noray/models/: __init__.py
rlinf_noray/runners/: agent_eval_runner.py  agent_runner.py  async_embodied_runner.py  async_ppo_embodied_runner.py  coding_online_rl_runner.py  embodied_eval_runner.py  embodied_runner.py  libero_dsrl_ddp_runner.py  libero_ppo_ddp_runner.py  reasoning_eval_runner.py  reasoning_runner.py  sft_runner.py
rlinf_noray/utils/: comm_mapping.py  cuda_graph.py  data_iter_utils.py  distributed.py  drq.py  initialize.py  logging.py  metric_logger.py  metric_utils.py  nested_dict_process.py  placement.py  pytree.py  utils.py
tests/unit_tests/: test_gaussian_policy_logprob_consistency.py  test_libero_dsrl_ddp_runner_order.py  test_libero_dsrl_replay_buffer.py  test_libero_dsrl_value_net.py  test_smolvla_policy_noray.py
toolkits/: bench_collect_samples_libero_noray.py  debug_env_warnings_456.py  debug_smolvla_select_action.py
toolkits/rollout_alignment/: dump_lerobot_single_step.py  replay_noray_single_step.py
toolkits/wandb/: fetch_dsrl_wandb_runs.py
(+163 files in other folders)
